--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
     />
+    <script
+      src="https://kit.fontawesome.com/da72a5ea3b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>
